# rshorty

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  rshorty.sqlite
configs/: default.json
migrations/: 20210519094659_create_url_maps.sql
src/: main.rs  types.rs
src/config/: mod.rs
src/db/: manager.rs  messages.rs  mod.rs
src/macros/: mod.rs
src/models/: mod.rs  url_map_model.rs
src/reactor/: messages.rs  mod.rs
src/server/: messages.rs  mod.rs
src/server/routes/: mod.rs
src/server/routes/api/: mod.rs
src/server/routes/api/v1/: mod.rs
src/server/routes/api/v1/ping/: handlers.rs
src/server/routes/api/v1/url_maps/: handlers.rs  mod.rs
src/utils/: mod.rs
