[package]
name = "rshorty"
version = "0.1.0"
authors = ["Dhruva Sagar <dhruva.sagar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.7"
routerify = "2.0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.4", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.6.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["registry",
"env-filter"] }
url = "2.2.2"
